<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>net.sf.aspect4log</groupId>
	<artifactId>aspect4log</artifactId>
	<version>2.0.0</version>
	<inceptionYear>2013</inceptionYear>
	<name>${project.artifactId}</name>
	<description>Provides aspect for logging via slf4j by placing @Log annotation on classes and methods.</description>
	<url>http://aspect4log.sf.net</url>
	<organization>
		<name>Yilativs</name>
		<url>https://sourceforge.net/u/yilativs/profile/</url>
	</organization>

	<licenses>
		<license>
			<name>GNU LESSER GENERAL PUBLIC LICENSE, Version 2.1</name>
			<url>http://www.gnu.org/licenses/old-licenses/lgpl-2.1.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	<issueManagement>
		<url>https://sourceforge.net/p/aspect4log/tickets/</url>
		<system>SourceForge</system>
	</issueManagement>
	<scm>
		<connection>scm:git:git://git.code.sf.net/p/aspect4log/code</connection>
		<!-- mvn -Dusername=your_scm_username release:prepare is needed in case your OS username is different from SCM username -->
		<developerConnection>scm:git:ssh://git.code.sf.net/p/aspect4log/code</developerConnection>
		<url>http://sourceforge.net/p/aspect4log/code/</url>
	</scm>
	<distributionManagement>
		<snapshotRepository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
		<!-- run before deploying site ssh -t yilativs,aspect4log@shell.sourceforge.net create -->
		<site>
			<id>sourceforge.net</id>
			<url>scp://shell.sourceforge.net/home/project-web/aspect4log/htdocs</url>
		</site>

	</distributionManagement>
	<developers>
		<developer>
			<id>yilativs</id>
			<name>Vitaliy Semochkin</name>
			<email>yilativs@users.sourceforge.net</email>
			<roles>
				<role>Founder</role>
				<role>Developer</role>
			</roles>
		</developer>
		<developer>
			<id>fui</id>
			<name>Maxim Gordienko</name>
			<email>fui@users.sourceforge.net</email>
			<roles>
				<role>Author of many useful comments and ideas</role>
				<role>Developer</role>
			</roles>
		</developer>
	</developers>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
		<spring.version>5.3.34</spring.version>
		<slf4j.version>2.0.16</slf4j.version>
		<aspectj.version>1.9.22.1</aspectj.version>
		<maven-pmd-plugin.configLocation>${project.basedir}/pmd.xml</maven-pmd-plugin.configLocation>
	</properties>

	<build>
		<plugins>
			<!-- <plugin> <groupId>org.codehaus.mojo</groupId> <artifactId>aspectj-maven-plugin</artifactId> <version>1.7</version> <executions> <execution> <goals> <goal>compile</goal> </goals> </execution> </executions> 
				<configuration> <source>${maven.compiler.source}</source> <target>${maven.compiler.target}</target> <complianceLevel>1.6</complianceLevel> <showWeaveInfo>true</showWeaveInfo> </configuration> </plugin> -->
			<plugin><!-- needed for site pluging to accept scp urls -->
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-site-plugin</artifactId>
				<version>3.20.0</version>
				<dependencies>
					<dependency>
						<groupId>org.apache.maven.wagon</groupId>
						<artifactId>wagon-ssh</artifactId>
						<version>2.8</version>
					</dependency>
				</dependencies>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<configuration>
					<releaseProfiles>attach-sources,attach-javadoc,sign-artifacts</releaseProfiles>
					<username>yilativs</username><!-- make sure that ssh key from current system is uploaded to sf.net -->
					<!-- <pushChanges>false</pushChanges> needed till release plugin works without bugs -->
					<!--<tagNameFormat>@{project.version}</tagNameFormat> default is @{project.artifactId}-@{project.version} -->
				</configuration>
			</plugin>
		</plugins>
	</build>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-framework-bom</artifactId>
				<version>${spring.version}</version>
				<type>pom</type>
				<scope>import</scope>
				<exclusions>
					<exclusion>
						<artifactId>commons-logging</artifactId>
						<groupId>commons-logging</groupId>
					</exclusion>
				</exclusions>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<dependencies>

		<dependency>
			<groupId>org.aspectj</groupId>
			<artifactId>aspectjweaver</artifactId>
			<version>${aspectj.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.aspectj</groupId>
			<artifactId>aspectjrt</artifactId>
			<version>${aspectj.version}</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.4</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/jakarta.xml.bind/jakarta.xml.bind-api -->
		<dependency>
			<groupId>jakarta.xml.bind</groupId>
			<artifactId>jakarta.xml.bind-api</artifactId>
			<version>4.0.2</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.glassfish.jaxb/jaxb-runtime -->
		<dependency>
			<groupId>org.glassfish.jaxb</groupId>
			<artifactId>jaxb-runtime</artifactId>
			<version>4.0.5</version>
			<scope>test</scope>
		</dependency>


		<dependency>
			<groupId>commons-beanutils</groupId>
			<artifactId>commons-beanutils</artifactId>
			<version>1.9.4</version>
			<exclusions>
				<exclusion>
					<artifactId>commons-logging</artifactId>
					<groupId>commons-logging</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<!-- we need this because we are using commons-beanutils which depend on commons-logging -->
			<groupId>org.slf4j</groupId>
			<artifactId>jcl-over-slf4j</artifactId>
			<version>${slf4j.version}</version>
		</dependency>
		<!-- <dependency> <groupId>org.slf4j</groupId> <artifactId>slf4j-log4j12</artifactId> <version>${slf4j.version}</version> </dependency> -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-aop</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context</artifactId>
			<exclusions>
				<exclusion>
					<artifactId>commons-logging</artifactId>
					<groupId>commons-logging</groupId>
				</exclusion>
			</exclusions>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>1.1.5</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-project-info-reports-plugin</artifactId>
				<version>3.7.0</version>
				<configuration>
					<dependencyDetailsEnabled>false</dependencyDetailsEnabled>
					<dependencyLocationsEnabled>false</dependencyLocationsEnabled>
				</configuration>
				<reportSets>
					<reportSet>
						<reports>
							<!-- <report>index</report> -->
							<report>summary</report>
							<report>issue-tracking</report>
							<report>project-team</report>
							<report>dependencies</report>
							<report>scm</report>
							<report>modules</report>
						</reports>
					</reportSet>
				</reportSets>
			</plugin>
			<plugin>
				<artifactId>maven-javadoc-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<!-- needed for cobertura -->
					<argLine>-XX:-UseSplitVerifier</argLine>
				</configuration>
				<version>2.19.1</version>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>findbugs-maven-plugin</artifactId>
				<version>3.0.5</version>
				<configuration>
					<xmlOutput>true</xmlOutput>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-pmd-plugin</artifactId>
				<version>3.25.0</version>
				<configuration>
					<targetJdk>${maven.compiler.source}</targetJdk>
					<sourceEncoding>${project.build.sourceEncoding}</sourceEncoding>
					<minimumTokens>60</minimumTokens>
					<rulesets>
						<ruleset>${maven-pmd-plugin.configLocation}</ruleset>
					</rulesets>
					<linkXref>true</linkXref>
					<failOnViolation>false</failOnViolation>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jxr-plugin</artifactId>
				<version>3.5.0</version>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>taglist-maven-plugin</artifactId>
				<version>3.2.1</version>
			</plugin>
			<!--coberura plugin makes the tests -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>cobertura-maven-plugin</artifactId>
				<version>2.7</version>
				<configuration>
					<formats>
						<format>html</format>
						<!-- needed only for CI servers such as jenkins <format>xml</format> -->
					</formats>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-changes-plugin</artifactId>
				<version>2.12.1</version>
				<!-- <inherited>false</inherited> -->
				<reportSets>
					<reportSet>
						<reports>
							<report>changes-report</report>
						</reports>
					</reportSet>
				</reportSets>

				<configuration>
					<issueLinkTemplate>http://sourceforge.net/p/aspect4log/tickets/%ISSUE%</issueLinkTemplate>
					<issueManagementSystems>
						<issueManagementSystem>changes.xml</issueManagementSystem>
						<issueManagementSystem>SourceForge</issueManagementSystem>
					</issueManagementSystems>
				</configuration>
			</plugin>
		</plugins>
	</reporting>
	<profiles>
		<profile>
			<id>ossrh</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-source-plugin</artifactId>
						<version>3.0.0</version>
						<executions>
							<execution>
								<id>attach-sources</id>
								<goals>
									<goal>jar-no-fork</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<executions>
							<execution>
								<id>attach-javadocs</id>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>1.6</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>